# DSIPTS_PTF

./: pyproject.toml
.github/workflows/: python-package.yml
dsipts/data_structure/: time_series_d1.py  time_series_d2.py
tests/unit/: test_time_series_d1.py  test_time_series_d2.py
