[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsipts"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "aim==3.29.1",
    "beautifulsoup4==4.13.4",
    "einops==0.8.1",
    "hydra-core==1.3.2",
    "matplotlib==3.10.3",
    "numba==0.61.2",
    "numpy>=2.2.0",
    "omegaconf==2.3.0",
    "pandas==2.3.0",
    "plotly==6.0.0",
    "pytorch_lightning==1.9.4",
    "Requests==2.32.4",
    "scikit_learn==1.7.0",
    "scipy==1.15.3",
    "setuptools==75.8.0",
    "sphinx_pdj_theme==0.5.0",
    "torch==2.6.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
